--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Liste des étudiants</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-..." crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <style>
         .fade-in {
             animation: fadeIn 0.5s ease forwards;
@@ -33,6 +34,12 @@
                 <button type="submit" class="btn btn-primary">Ajouter</button>
             </div>
         </form>
+
+        <div class=""row mb-3>
+            <div class=""col-md-12>
+                <input type="text" id="searchInput" placeholder="Rechercher un étudiant..." class="form-control">
+            </div>
+        </div>
 
         <ul class="list-group mb-4" id="studentList">
         </ul>
